<resources>
    <string name="app_name">NWitmerLab1</string>

    <string name="Title">One Question Survey</string>
    <string name="NamePrompt">First Name:</string>
    <string name="surveyBtn">Take Survey</string>
    <string name="webBtn">Goto Website</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_survey">SurveyActivity</string>
    <string name="age_question">How old are you?</string>
    <string name="age">Age:</string>
    <string name="surveyBtn2">SUBMIT</string>
    <string name="hi">Hello</string>

    <string name="hello_world">Hello world!</string>
</resources>
